--- a/src/documents/styles/layout/_footer.scss
+++ b/src/documents/styles/layout/_footer.scss
@@ -1,51 +1,43 @@
 #site-footer-container {
-	color: $header-font-color;
-	width: 100%;
-	padding: 3em 0.5em 0.5em 0.5em;
-	position: relative;
-	@include background-image(linear-gradient(to top, $banner-background-top-gradient-color $banner-background-top-gradient-stop, $banner-background-bottom-gradient-color $banner-background-bottom-gradient-stop), $footer-background);
-
-	&:after {
-	    content: ' ';
-	    position: absolute;
-	    left: 0;
-	    right: 0;
-	    top: 0;
-	    bottom: 0;
-	    background: $footer-background;
-	    z-index: -1;
-	    opacity: 0.1;
-	}
-
-	#site-footer {
-		@include outer-container();
-		@include clearfix();
-		position: relative;
-
-		#footer-colophon {
-			margin-bottom: 2em;
-
-			h1 {
-				color: $msdevshow-blue;
-				font-size: 1.6em;
-			}
-		}
-
-		.footer-nav {
-			@include span-columns(3);
-
-			h1 {
-				font-size: 1.2em;
-				color: $msdevshow-red;
-
-				a {
-					color: $msdevshow-red;
-				}
-			}
-
-			@include media($mobile) {
-				display: none;
-			}
-		}
-	}
+    color: $header-font-color;
+    width: 100%;
+    padding: 3em 0.5em 3em 0.5em;
+    position: relative;
+    @include background-image(linear-gradient(to top, $banner-background-top-gradient-color $banner-background-top-gradient-stop, $banner-background-bottom-gradient-color $banner-background-bottom-gradient-stop), $footer-background);
+    &:after {
+        content: ' ';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: $footer-background;
+        z-index: -1;
+        opacity: 0.1;
+    }
+    #site-footer {
+        @include outer-container;
+        @include clearfix;
+        position: relative;
+        #footer-colophon {
+            margin-bottom: 2em;
+            h1 {
+                color: $msdevshow-blue;
+                font-size: 1.6em;
+            }
+        }
+        .footer-nav {
+            @include span-columns(3);
+            h1 {
+                font-size: 1.2em;
+                color: $msdevshow-red;
+                a {
+                    color: $msdevshow-red;
+                }
+            }
+            @include media($mobile) {
+                display: none;
+            }
+        }
+    }
 }
